--- a/config.toml
+++ b/config.toml
@@ -1,13 +1,13 @@
 relativeURLs = true
 googleAnalytics = "UA-159072578-1"
-title = "Stefanie Stantcheva"
+title = "Hui Li"
 theme = "academimal"
 sectionPagesMenu = "main"
 defaultContentLanguage = "en"
 disableKinds = ["taxonomy", "taxonomyTerm"]
 
 [author]
-name = "Stefanie Stantcheva"
+name = "Hui Li"
 
 [markup] # needed to add html in .md
   [markup.goldmark]
@@ -15,8 +15,7 @@ name = "Stefanie Stantcheva"
       unsafe = true
 
 [params]
-title = "Nathaniel Ropes Professor of Political Economy,"
-institution = "Harvard University"
-logo = "Stefanie_Stantcheva_headshot_signed_fil-3.jpg"
-Twitter = "S_Stantcheva"
-Email = "sstantcheva@fas.harvard.edu"
+title = "PH.D. Candidate"
+institution = "Department at School of Finance, Renmin University of China"
+Twitter = ""
+Email = "lihuieco@ruc.edu.cn"
