--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ name = "Hui Li"
       unsafe = true
 
 [params]
-title = "PH.D. Candidate"
+title = ""
 institution = "Department at School of Finance, Renmin University of China"
 Twitter = ""
 Email = "lihuieco@ruc.edu.cn"
