--- a/config.toml
+++ b/config.toml
@@ -16,6 +16,6 @@ name = "Hui Li"
 
 [params]
 title = ""
-institution = "Department at School of Finance, Renmin University of China"
+institution = "School of Finance, Renmin University of China"
 Twitter = ""
 Email = "lihuieco@ruc.edu.cn"
