--- a/data/teaching/teaching.yaml
+++ b/data/teaching/teaching.yaml
@@ -1,1 +1,6 @@
+workingpapers:
 
+- title: "Tax Design, Information, and Elasticities: Evidence from the French Wealth Tax [UPDATED! April 2023]" 
+  pdflink: "https://scholar.harvard.edu/files/stantcheva/files/wealth_tax_france.pdf?1" 
+  coauthors: "Bertrand Garbinti, Jonathan Goupille-Lebret, Mathilde Munoz, and Gabriel Zucman" 
+  book: "Harvard University Working Paper"
