--- a/data/teaching/teaching.yaml
+++ b/data/teaching/teaching.yaml
@@ -1,6 +1,12 @@
-workingpapers:
+courses:
+- title: Compiler Technology
+  id: "04830150"
+  institute: "Peking University"
+  term: "Spring '18"
+  instructor: Prof. Yun Liang
 
-- title: "Tax Design, Information, and Elasticities: Evidence from the French Wealth Tax [UPDATED! April 2023]" 
-  pdflink: "https://scholar.harvard.edu/files/stantcheva/files/wealth_tax_france.pdf?1" 
-  coauthors: "Bertrand Garbinti, Jonathan Goupille-Lebret, Mathilde Munoz, and Gabriel Zucman" 
-  book: "Harvard University Working Paper"
+- title: Computer Networks (Honor Track)
+  id: "04832250"
+  institute: Peking University
+  term: "Fall '17"
+  instructor: Prof. Chenren Xu
