--- a/data/teaching/teaching.yaml
+++ b/data/teaching/teaching.yaml
@@ -5,8 +5,8 @@ courses:
   term: "Fall '2021"
   instructor: Prof. 尹恒
 
-- title: Computer Networks (Honor Track)
-  id: "04832250"
-  institute: Peking University
-  term: "Fall '17"
-  instructor: Prof. Chenren Xu
+- title: teaching assistant
+  id: "《财政学》"
+  institute: "Department of Finance, Renmin University of China"
+  term: "Fall '2022"
+  instructor: Prof. [Prof. Mohammad Alizadeh](http://sf.ruc.edu.cn/info/1433/9689.html)
