--- a/data/teaching/teaching.yaml
+++ b/data/teaching/teaching.yaml
@@ -3,7 +3,7 @@ courses:
   id: "《财政学》"
   institute: "Department of Finance, Renmin University of China"
   term: "Fall '2021"
-  instructor: Prof. 尹恒
+  instructor: Prof. 尹恒[Xinyue Lin](https://xylin.net) - economist in training
 
 - title: teaching assistant
   id: "《财政学》"
