--- a/data/teaching/teaching.yaml
+++ b/data/teaching/teaching.yaml
@@ -3,10 +3,10 @@ courses:
   id: "《财政学》"
   institute: "Department of Finance, Renmin University of China"
   term: "Fall '2021"
-  instructor: Prof. 尹恒[Xinyue Lin](https://xylin.net) - economist in training
+  instructor: Prof. 尹恒(https://xylin.net) - economist in training
 
 - title: teaching assistant
   id: "《财政学》"
   institute: "Department of Finance, Renmin University of China"
   term: "Fall '2022"
-  instructor: Prof. [Prof. Mohammad Alizadeh](http://sf.ruc.edu.cn/info/1433/9689.html)
+  instructor: Prof. 谢晓晨(http://sf.ruc.edu.cn/info/1433/9689.html)
