--- a/data/teaching/teaching.yaml
+++ b/data/teaching/teaching.yaml
@@ -3,8 +3,8 @@ courses:
   id: "《财政学》"
   institute: "Department of Finance, Renmin University of China"
   term: "Fall '2021"
-  instructor: Prof. 尹恒(https://xylin.net) - economist in training
-
+  instructor: Prof. 尹恒(https://xylin.net)
+  
 - title: teaching assistant
   id: "《财政学》"
   institute: "Department of Finance, Renmin University of China"
