--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -14,7 +14,7 @@ workingpapers:
 publications:
 
 - title: "中国制造业技术进步方向的识别与估计"
-  pdflink: "https://scholar.harvard.edu/files/stantcheva/files/How_to_run_surveys_Stantcheva.pdf"
+  pdflink: "https://github.com/huiliecon/huilisite/blob/master/warehouse/2023%2C%E4%B8%AD%E5%9B%BD%E5%88%B6%E9%80%A0%E4%B8%9A%E6%8A%80%E6%9C%AF%E8%BF%9B%E6%AD%A5%E6%96%B9%E5%90%91%E7%9A%84%E8%AF%86%E5%88%AB%E4%B8%8E%E4%BC%B0%E8%AE%A1.pdf"
   book: "《经济研究》"
   year: "2023"
   links:
