--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -14,7 +14,7 @@ workingpapers:
 publications:
 
 - title: "中国制造业技术进步方向的识别与估计"
-  pdflink: "/warehouse/2023,中国制造业技术进步方向的识别与估计.pdf"
+  pdflink: "warehouse/2023,中国制造业技术进步方向的识别与估计.pdf"
   book: "《经济研究》"
   coauthors: "尹恒，张道远"
   year: "2023"
