--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -2,7 +2,7 @@ workingpapers:
 
 - title: "最低工资与劳动市场垄断" 
   pdflink: "" 
-  coauthors: "[邹先强]，尹恒" 
+  coauthors: "[邹先强]，[尹恒](http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm)" 
   book: ""
   year: "2023" 
   links: 
