--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -2,7 +2,7 @@ workingpapers:
 
 - title: "最低工资与劳动市场垄断" 
   pdflink: "" 
-  coauthors: "邹先强(https://www.stefanie-stantcheva.com/research/),尹恒(http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm)" 
+  coauthors: "邹先强(https://www.stefanie-stantcheva.com/research/),尹恒" 
   book: ""
   year: "2023" 
   links: 
@@ -15,7 +15,11 @@ publications:
 - title: "中国制造业技术进步方向的识别与估计"
   pdflink: "warehouse/2023,中国制造业技术进步方向的识别与估计.pdf"
   book: "《经济研究》"
-  coauthors: "尹恒,张道远"
+  presscoverage:
+    - url: "http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm"
+      text: "尹恒"
+    - url: ""
+      text: "张道远"
   year: "2023"
   links:
     - url: "https://kns.cnki.net/kcms2/article/abstract?v=TkGDOGz83pu0Zv0i-pvgs2t9d6r9DVWf9lSnEAiTbO6BF2LZBULrIOAnG7sS4xVR0rOaRUx-DyQtMxTtY-Qqv9InGzJQWQtW8zEi5RVbteoQhyEI39F7SQ==&uniplatform=NZKPT&language=gb"
