--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -18,7 +18,7 @@ publications:
   presscoverage:
     - url: "http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm"
       text: "尹恒"
-    - url: ""
+    - url: 
       text: "张道远"
   year: "2023"
   links:
