--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -7,7 +7,7 @@ workingpapers:
       text: "尹恒"
     - url: "http://slhr.ruc.edu.cn/szdw/zzjs/ldjj/zxq/dde3adcbd9f5420baac832d3bb7801dc.htm"
       text: "邹先强。"
-  book: "工作论文"
+  book: ""
   year: "2023年" 
   abstract: >
     破除劳动市场垄断障碍对于推动经济高质量发展，完善收入分配格局具有重要意义。本文基于新近发展的“生产端方法”，利用2007-2016年全国税收调查数据直接在微观层面估计了劳动市场垄断状况的测度指标——劳动折价率，即劳动边际产出和工资之比。结果显示中国劳动市场远非完全竞争，企业在劳动市场具有很强的买方垄断势力。样本期内制造业的平均劳动折价率为1.683，意味着工人只能得到其边际产出的59%。不过随着时间演进，劳动折价率迅速下降，劳动市场垄断状况明显改善。进一步，本文发现最低工资标准提高显著抑制了企业的劳动市场垄断势力，对于一个代表性企业，最低工资标准提高10%，劳动折价率下降0.57%。据此推算，最低工资标准变化大约能够解释2008-2016年间制造业劳动折价率下降的25%。此外，提高最低工资标准还会降低“地区-行业”内劳动折价率的离散度，改善资源配置效率。本文结果揭示了劳动市场垄断是中国企业垄断行为的重要维度，最低工资制度是弱化劳动市场垄断、缓解劳动市场扭曲的有效举措。
@@ -30,3 +30,14 @@ publications:
       text: "Slides"
   abstract: >
      技术进步方向是决定经济增长和要素分配的关键因素之一。然而目前学界对于技术进步方向的定量研究仍然十分欠缺。本文尝试在生产函数中同时引入希克斯中性生产率和劳动增强型生产率，直接在微观层面识别和估计技术进步方向。综合使用1999—2016年中国工业企业数据与全国税收调查数据的估计结果显示，样本期内中国制造业技术进步具有明显的偏向性特征: 劳动增强型生产率增速保持稳定，年均增长10% ，带动产出年均增长1.0%;希克斯中性生产率带动产出年均增长2.5%，但金融危机过后尤其是2011年后增速明显放缓。这意味着随着时间演进，有偏技术进步对产出的相对贡献不断提高，并在样本后期成为产出增长的主要源泉。估计结果还显示，制造业效率的提高主要源于企业自身成长，行业内资源配置的贡献有限，配置效率仍然存在较大改善空间。本文刻画了21世纪近20年中国制造业技术变迁的整体图景，可以为新常态下推动技术创新、促进高质量发展的政策选择提供重要的经验支撑。
+
+- title: "Hometown Favoritism in Traffic Citations: Evidence from China"
+  pdflink: ""
+  presscoverage:
+    - url: ""
+      text: "Min Dai"
+  book: "Economics Letters"
+  year: "2023"
+  abstract: >
+     Based on a large sample of waterway traffic citations in China, our analysis reveals that local firms face fines that are 4.3% lower for the same offenses and are more prone to receiving lighter punishments. The leniency in law enforcement is more pronounced in districts with greater social capital and better fiscal conditions. These results indicate that even appointed grassroots officials could engage in hometown
+favoritism.
