--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -37,6 +37,6 @@ publications:
     - url: ""
       text: "Min Dai"
   book: "Economics Letters"
-  year: "2023"
+  year: "2023, Accepted"
   abstract: >
      Based on a large sample of waterway traffic citations in China, our analysis reveals that local firms face fines that are 4.3% lower for the same offenses and are more prone to receiving lighter punishments. The leniency in law enforcement is more pronounced in districts with greater social capital and better fiscal conditions. These results indicate that even appointed grassroots officials could engage in hometown favoritism.
