--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -13,7 +13,7 @@ workingpapers:
 publications:
 
 - title: "中国制造业技术进步方向的识别与估计"
-  pdflink: "huiliecon.github.io/Papers/2023,biased_technology_change.pdf"
+  pdflink: "https://huiliecon.github.io/Papers/2023,biased%20technology%20change.pdf"
   presscoverage:
     - url: "http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm"
       text: "尹恒"
