--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -1,6 +1,24 @@
 workingpapers:
 
+- title: "Identification of Labor market monopsony with Non-neutral Productivity" 
+  pdflink: "" 
+  presscoverage:
+    - url: "http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm"
+      text: "Heng Yin"
+  book: "Working paper"
+  year: "2023." 
+
 - title: "Minimum wage and Labor market power" 
+  pdflink: "" 
+  presscoverage:
+    - url: "http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm"
+      text: "Heng Yin"
+    - url: "http://slhr.ruc.edu.cn/szdw/zzjs/ldjj/zxq/dde3adcbd9f5420baac832d3bb7801dc.htm"
+      text: "Xianqiang Zou"
+  book: "Working paper"
+  year: "2023." 
+
+- title: "Robot adoption and Labor market power：Evidence from China" 
   pdflink: "" 
   presscoverage:
     - url: "http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm"
