--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -1,6 +1,6 @@
 workingpapers:
 
-- title: "Identification of Labor market monopsony with Non-neutral Productivity" 
+- title: "Identification of Labor market power with Non-neutral Productivity" 
   pdflink: "" 
   presscoverage:
     - url: "http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm"
@@ -8,7 +8,7 @@ workingpapers:
   book: "Working paper"
   year: "2023." 
 
-- title: "Minimum wage and Labor market power" 
+- title: "Minimum wage and Labor market monopsony" 
   pdflink: "" 
   presscoverage:
     - url: "http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm"
@@ -18,7 +18,7 @@ workingpapers:
   book: "Working paper"
   year: "2023." 
 
-- title: "Robot adoption and Labor market power：Evidence from China" 
+- title: "Robot adoption and Labor market monopsony：Evidence from China" 
   pdflink: "" 
   presscoverage:
     - url: "http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm"
