--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ homepage = "https://huili.netlify.app/"
 institution = "School of Finance, Renmin University of China"
 shortbio = "Ph.D. candidate in Economics"
 logo = ""
-Twitter = "S_Stantcheva"
+Twitter = "Hui_Li_RUC"
 Email = "lihuieco@ruc.edu.cn"
 
 [markup]
