--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -40,7 +40,7 @@ publications:
     - url: "http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm"
       text: "尹恒"
     - url: ""
-      text: "张道远。"
+      text: "张道远"
   book: "《经济研究》"
   year: "2023年第4期。" 
   links:
