--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -46,7 +46,7 @@ workingpapers:
     - url: "https://csxy.zuel.edu.cn/2022/0826/c7501a304283/page.htm"
       text: "张子尧"
     - url: "http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm"
-      text: "张子尧"
+      text: "尹恒"
   book: "Working paper"
   year: "2023." 
        
