--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -20,7 +20,7 @@ workingpapers:
   book: "Working paper"
   year: "2023." 
 
-- title: "Robot adoption and Labor market monopsony：Evidence from China" 
+- title: "Relaxing Internal Migration Restrictions and Labor Market Monopsony: Evidence from China" 
   pdflink: "" 
   presscoverage:
     - url: "http://slhr.ruc.edu.cn/szdw/zzjs/ldjj/zxq/dde3adcbd9f5420baac832d3bb7801dc.htm"
