--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -4,6 +4,19 @@ workingpapers:
   pdflink: ""
   presscoverage:
     - url: ""
+      text: "邹先强"
+      - url: ""
+      text: "李瑶"
+      - url: "http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm"
+      text: "尹恒"
+  book: "Job Market Paper."
+  year: ""
+  abstract: 
+
+- title: "最低工资与劳动市场垄断"
+  pdflink: ""
+  presscoverage:
+    - url: ""
       text: ""
   book: "Job Market Paper."
   year: ""
