--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -3,9 +3,9 @@ workingpapers:
 - title: "Tax Policy and Labor Market Monopsony"
   pdflink: ""
   presscoverage:
-    - url: ""
+    - url: "http://slhr.ruc.edu.cn/szdw/zzjs/ldjj/zxq/dde3adcbd9f5420baac832d3bb7801dc.htm"
       text: "邹先强"
-      - url: ""
+      - url: "http://yaoli.people.ust.hk/"
       text: "李瑶"
       - url: "http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm"
       text: "尹恒"
