--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -16,8 +16,12 @@ workingpapers:
 - title: "最低工资与劳动市场垄断"
   pdflink: ""
   presscoverage:
-    - url: ""
-      text: ""
+    - url: "http://slhr.ruc.edu.cn/szdw/zzjs/ldjj/zxq/dde3adcbd9f5420baac832d3bb7801dc.htm"
+      text: "邹先强"
+      - url: "http://yaoli.people.ust.hk/"
+      text: "李瑶"
+      - url: "http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm"
+      text: "尹恒"
   book: "Job Market Paper."
   year: ""
   abstract: 
