--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -18,7 +18,7 @@ workingpapers:
       text: "李瑶"
       - url: "http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm"
       text: "尹恒"
-  book: "Job Market Paper."
+  book: ""
   year: ""
   abstract: 
 
@@ -29,7 +29,18 @@ workingpapers:
       text: "谢晓晨"
       - url: "http://sf.ruc.edu.cn/info/1240/8096.htm"
       text: "马光荣"
-  book: "Job Market Paper."
+  book: ""
+  year: ""
+  abstract: 
+
+  - title: "劳动力市场扭曲和企业间不平等"
+  pdflink: ""
+  presscoverage:
+    - url: "https://zhonghua-wang.netlify.app/"
+      text: "王中华"
+    - url: "http://slhr.ruc.edu.cn/szdw/zzjs/ldjj/zxq/dde3adcbd9f5420baac832d3bb7801dc.htm"
+      text: "邹先强"
+  book: ""
   year: ""
   abstract: 
 
