--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -22,28 +22,7 @@ workingpapers:
   book: ""
   year: ""
   abstract: >
-
-  - title: "中国式现代化的贸易福利"
-  pdflink: ""
-  presscoverage:
-    - url: "http://sf.ruc.edu.cn/info/1433/9689.htm"
-      text: "谢晓晨"
-      - url: "http://sf.ruc.edu.cn/info/1240/8096.htm"
-      text: "马光荣"
-  book: ""
-  year: ""
-  abstract: >
-
-  - title: "劳动力市场扭曲和企业间不平等"
-  pdflink: ""
-  presscoverage:
-    - url: "https://zhonghua-wang.netlify.app/"
-      text: "王中华"
-    - url: "http://slhr.ruc.edu.cn/szdw/zzjs/ldjj/zxq/dde3adcbd9f5420baac832d3bb7801dc.htm"
-      text: "邹先强"
-  book: ""
-  year: ""
-  abstract: >
+     技术进步方向是决
 
 
 
