--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -6,10 +6,8 @@ workingpapers:
       - url: "http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm"
       text: "Heng Yin"
   book: "Job Market Paper."
-  year: ""
+  year: "2023"
   abstract: >
-
-
 
 
 publications:
