--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -3,8 +3,8 @@ workingpapers:
 - title: "Tax Policy and Labor Market Monopsony"
   pdflink: ""
   presscoverage:
-      - url: "http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm"
-      text: "Heng Yin"
+      - url: 
+      text: 
   book: "Job Market Paper."
   year: "2023"
   abstract: >
