Add PDF link and press coverage URLs to publication
Updated publication details for a research paper.

--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -2,13 +2,13 @@
 publications:
 
 - title: "Industrial Policy and Capacity Utilization: Evidence from China’s Five-Year Plans"
-  pdflink: ""
+  pdflink: "https://www.sciencedirect.com/science/article/abs/pii/S0167718725001031"
   presscoverage:
-    - url: ""
+    - url: "https://sites.google.com/site/luwenzhuo/home"
       text: "Wenzhuo Lu"
-    - url: ""
+    - url: "https://xiexiaochen.weebly.com"
       text: "Xiaochen Xie"
-    - url: ""
+    - url: "http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm"
       text: "Heng Yin"
   book: "International Journal of Industrial Organization"
   year: "December, 2025."
