--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -18,11 +18,10 @@ publications:
 - title: "China’s technological rise and its global welfare effects"
   pdflink: "https://www.sciencedirect.com/science/article/abs/pii/S026499932500402X"
   presscoverage:
-    - url: ""
+    - url: "https://sites.google.com/site/luwenzhuo/home"
       text: "Wenzhuo Lu"
-    - url: ""
-      text: "Aoxin Wang"
-    - url: ""
+    - text: "Aoxin Wang"
+    - url: "https://xiexiaochen.weebly.com"
       text: "Xiaochen Xie"
   book: "Economics Modelling"
   year: "February,2026."
