--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -98,6 +98,16 @@ publications:
   book: "《中国工业经济》"
   year: "2024年第8期。" 
 
+- title: "《中国劳动收入份额的演变趋势及基于制造业的驱动力探索》" 
+  pdflink: "" 
+  presscoverage:
+    - url: "http://nads.ruc.edu.cn/jgsz/qzjs/js/c2ff8cbc92764c258df5a044a68b18bd.htm"
+      text: "尹恒"
+    - url: ""
+      text: "张道远"
+  book: "《金融研究》"
+  year: "2024年第7期。" 
+
 - title: "《要素替代弹性、有偏技术进步和劳动收入份额上升》" 
   pdflink: "" 
   presscoverage:
