--- a/themes/academimal/theme.toml
+++ b/themes/academimal/theme.toml
@@ -11,7 +11,7 @@ features = []
 min_version = "0.41"
 
 [author]
-  name = "Lei Yang"
+  name = "Hui Li"
   homepage = "https://huili.netlify.app/"
 
 # If porting an existing theme
