--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -8,6 +8,8 @@ workingpapers:
       text: "邹先强"
     - url: "http://nads.ruc.edu.cn/yjtd/qzjs/js/2fe0e8a30feb49478e3b87c632690de8.htm"
       text: "尹恒"
+  book:
+  year: "December, 2025."
 
 publications:
 
