--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -8,7 +8,7 @@ workingpapers:
       text: "邹先强"
     - url: "http://nads.ruc.edu.cn/yjtd/qzjs/js/2fe0e8a30feb49478e3b87c632690de8.htm"
       text: "尹恒"
-  book:
+  book: "Working Paper"
   year: "December, 2025."
 
 publications:
