--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -1,6 +1,6 @@
 workingpapers:
 
-- title: "效率差异、市场扭曲与企业间工资不平等"
+- title: "《效率差异、市场扭曲与企业间工资不平等》"
   presscoverage:
     - url: "https://csxy.zuel.edu.cn/2024/0806/c7501a370590/page.htm"
       text: "王中华"
