--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -23,7 +23,7 @@ publications:
     - url: "http://nads.ruc.edu.cn/yjtd/qzjs/js/2fe0e8a30feb49478e3b87c632690de8.htm"
       text: "Heng Yin"
   book: "International Journal of Industrial Organization"
-  year: "December, 2025."
+  year: "January, 2026."
   abstract: >
      This paper investigates the impact of government industrial policy on firm capacity utilization and resource misallocation. We develop an estimation methodology based on firm cost minimization to determine optimal and actual production capacities. Using China’s 12th Five-Year Plan, initiated in 2011, as a natural experiment, we apply a difference-in-differences estimation method. Our findings show that the policy support for targeted industries was associated with lower capacity utilization rates among Chinese firms. Mechanism analysis indicates that tax incentives fostered more optimistic market expectations, resulting in increased investments and higher production capacity. At the same time, these policies appear to have stimulated additional market entry, which, while promoting competition and technological upgrading, may have also led to smaller market shares per firm and potential resource allocation frictions.
 
@@ -36,7 +36,7 @@ publications:
       text: "Aoxin Wang"
     - url: "https://xiexiaochen.weebly.com"
       text: "Xiaochen Xie"
-  book: "Economics Modelling"
+  book: "Economic Modelling"
   year: "February,2026."
   abstract: >
      This paper examines how China’s technological progress has evolved since 1979 and its impact on global welfare. Using a multi-country Ricardian trade model and data from the 50 largest economies, we estimate China’s technological trajectory over time. Although China still trails world leaders such as the United States, it has substantially closed the gap with advanced economies. Counterfactual analysis shows that had China’s technology remained at its WTO accession level, global trade gains would be 3.47% lower. Conversely, a 2.5% reduction in trade costs under the Belt and Road Initiative could raise welfare gains from China’s progress by 2.92%. Projections suggest that continued upgrading, together with China’s economic scale, will further shape global trade outcomes. The results highlight both the opportunities and challenges China’s technological trajectory poses for the world economy.
