--- a/data/resources/resources.yaml
+++ b/data/resources/resources.yaml
@@ -1,4 +1,4 @@
-workingpapers:
+Links:
 
 - title: "《效率差异、市场扭曲与企业间工资不平等》"
   presscoverage:
@@ -11,7 +11,7 @@ workingpapers:
   book: "Working Paper"
   year: "December, 2025."
 
-publications:
+JMP:
 
 - title: "Industrial Policy and Capacity Utilization: Evidence from China’s Five-Year Plans"
   pdflink: "https://www.sciencedirect.com/science/article/abs/pii/S0167718725001031"
