--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,5 @@
+<meta name="google-site-verification" content="fiP05g-UrT9p6lh8Prqht_qZnh3XrMTCSWZceTKbN7o" />
+
 relativeURLs = true
 googleAnalytics = "UA-159072578-1"
 title = "Hui Li"
